# carlos

./: .gitignore  Cargo.toml  Dockerfile  Makefile  linker.ld  lldb_run.sh  run.sh
.cargo/: config.toml
asm/: boot.asm  main64.asm
iso/boot/grub/: grub.cfg
src/: idt.c  lib.rs  main.c  main.rs  testy.rs
src/asm/: boot.asm  main64.asm  multiboot_header.asm
src/c/: exec.c  exec.h  idt.c  io.c  io.h  main.c
src/c/internal/: exec.h
src/programs/: hello.c
src/rust/: lib.rs  mem.rs  paging.rs  pic.rs
tests/: test_exec.c
