[package]
name = "carlos"
version = "0.1.0"
edition = "2024"

[dependencies]
x86 = "0.52.0"
linked_list_allocator = "0.10"
elf = { version = "0.8", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"
opt-level = 0
debug = true

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]
name = "carlos"
path = "src/rust/lib.rs"